# eternal

./: .gitignore  Makefile  README.md  demo.md  info.md  package-lock.json  package.json  pnpm-lock.yaml
app/admin/: page.tsx
app/marketplace/: page.tsx
app/portfolio/: PortfolioContent.tsx  page.tsx
app/register/: page.tsx
apps/admin/: package.json
apps/api/: package.json  tsconfig.json
apps/exchange/: README.md  package.json  solana_cli_testing.md
apps/issuance-portal/: package.json
apps/web/: next.config.js  package.json  tailwind.config.ts
apps/worker/: package.json  tsconfig.json
asset-tokenization/: Anchor.toml  README.md  package.json
asset-tokenization/migrations/: deploy.ts
asset-tokenization/tests/: asset_tokenization.test.ts  asset_tokenization.ts
components/: DeadManSwitch.tsx  Homepage.tsx
components/home/: Hero.tsx  (+2 more)
docs/: ARCHITECTURE.md  PLAN.md  SETUP.md
programs/asset-tokenization/programs/asset_tokenization/: Cargo.toml
programs/asset-tokenization/programs/asset_tokenization/src/: error.rs  lib.rs
programs/asset-tokenization/programs/asset_tokenization/src/account/: add_document.rs  register_asset.rs  sell_fractions.rs  tokenize_asset.rs  update_asset.rs  verify_asset.rs
programs/asset-tokenization/programs/asset_tokenization/src/instructions/: add_document.rs  buy_fractions.rs  register_asset.rs  tokenize_asset.rs  transfer_ownership.rs  update_asset.rs
programs/asset-tokenization/programs/asset_tokenization/src/state/: asset.rs  config.rs  mod.rs  product.rs
scripts/: dev-setup.ts
types/: asset-tokenization.ts
(+234 files in other folders)
