[package]
name = "asset-tokenization"
version = "0.1.0"
description = "Solana program for local-first property offerings and compliant settlement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asset_tokenization"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
